--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
     </div>
 
 <!-- Role Selection Screen -->
- <div id="role-selection-container">
-    <div id="role-selection-screen" class="screen active">
+<div id="role-selection-screen" class="screen active"></div>
+    <div id="role-selection-container">
       <h1>Select Your Role</h1>
     </div>
     <div id="role-selection-container">
