--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <!-- Game Board Screen -->
     <div id="game-board-screen" class="screen">
-        <div class="game-board-container">
+        <div id="board-container" class="game-board-container">
             <canvas id="board-canvas"></canvas>
             <div id="ui-container">
                 <div id="player-info">
