--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
             <h1>Select Your Role</h1>
             <div id="role-selection-container" class="grid-container">
                 <!-- Artist Card -->
-                <div class="role-card grid-item">
+                <div class="grid-item role card">
                     <h2>Salvidor Dali The Artist</h2>
                     <h3>A Brilliant Nutjob And Entertaining Loose Cannon</h3>
-                    <div class="card-body">
-                        <div class="card-text">
+                    <div class="role-card-body">
+                        <div class="role-card-text">
                             <p><strong>Starting Resources:</strong>14 Influence, 8 Knowledge, 0 Money</p>
                             <p><strong>Special Ability:</strong> Cannot be forced to change paths</p>
                             <p><strong>Opposition:</strong> Entrepreneur</p>
                         </div>
-                        <div class="token-image">
+                        <div class="token-image role-card-image">
                             <img src="assets/tokens/A.png" alt="Artist">
                         </div>
                     </div>
-                    <div class="card-footer">
+                    <div class="role-card-footer">
                         <button class="role-select" data-role="artist">Select</button>
                     </div>
                 </div>
