--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                         <img src="assets/tokens/A.png" alt="Artist">
                     </div>
                 </div>
+                <div class="role-card-footer">
+                    <button class="role-select" data-role="colonialist">Select</button>
+                </div>
             </div>
 
             <!-- Historian Card -->
@@ -74,6 +77,9 @@
                     <div class="token-image role-card-image">
                         <img src="assets/tokens/H.png" alt="Historian">
                     </div>
+                </div>
+                <div class="role-card-footer">
+                    <button class="role-select" data-role="colonialist">Select</button>
                 </div>
             </div>
 
@@ -91,6 +97,9 @@
                         <img src="assets/tokens/C.png" alt="Colonialist">
                     </div>
                 </div>
+                <div class="role-card-footer">
+                    <button class="role-select" data-role="colonialist">Select</button>
+                </div>
             </div>
 
             <!-- Revolutionary Card -->
@@ -106,6 +115,9 @@
                     <div class="token-image role-card-image">
                         <img src="assets/tokens/R.png" alt="Revolutionary">
                     </div>
+                </div>
+                <div class="role-card-footer">
+                    <button class="role-select" data-role="colonialist">Select</button>
                 </div>
             </div>
 
@@ -123,6 +135,9 @@
                         <img src="assets/tokens/P.png" alt="Politician">
                     </div>
                 </div>
+                <div class="role-card-footer">
+                    <button class="role-select" data-role="colonialist">Select</button>
+                </div>
             </div>
 
             <!-- Entrepreneur Card -->
@@ -138,6 +153,9 @@
                     <div class="token-image role-card-image">
                         <img src="assets/tokens/E.png" alt="Entrepreneur">
                     </div>
+                </div>
+                <div class="role-card-footer">
+                    <button class="role-select" data-role="colonialist">Select</button>
                 </div>
             </div> 
         <div class="confirm-button-container">
