--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <button class="role-select" data-role="colonialist">Select</button>
                 </div>
             </div>
-
+        </div>
             <!-- Historian Card -->
             <div class="role-card grid-item">
                 <h2>Suetonius The Historian</h2>
