--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <!-- Role Selection Screen -->
-    <div id="role-selection-screen" class="screen">
+    <div id="role-selection-screen" class="screen hidden">
         <h2>Select Roles</h2>
         <div id="role-selection-container" class="grid-container">
             <!-- Artist Card -->
@@ -60,26 +60,26 @@
                     </div>
                 </div>
                 <div class="role-card-footer">
-                    <button class="role-select" data-role="colonialist">Select</button>
+                    <button class="role-select" data-role="artist">Select</button>
                 </div>
             </div>
-        </div>
+
             <!-- Historian Card -->
             <div class="role-card grid-item">
                 <h2>Suetonius The Historian</h2>
                 <h3>Rome's Greatest Gossip....err Historian</h3>
-                <div class="role-card-body">
-                    <div class="role-card-text">
+                <div class="card-body">
+                    <div class="card-text">
                         <p><strong>Starting Resources:</strong> 14 Knowledge, 8 Memory, 0 Influence</p>
                         <p><strong>Special Ability:</strong> Cannot have knowledge stolen</p>
                         <p><strong>Opposition:</strong> Politician</p>
                     </div>
-                    <div class="token-image role-card-image">
+                    <div class="token-image">
                         <img src="assets/tokens/H.png" alt="Historian">
                     </div>
                 </div>
-                <div class="role-card-footer">
-                    <button class="role-select" data-role="colonialist">Select</button>
+                <div class="card-footer">
+                    <button class="role-select" data-role="historian">Select</button>
                 </div>
             </div>
 
@@ -87,17 +87,17 @@
             <div class="role-card grid-item">
                 <h2>Jacques Cartier The Colonialist</h2>
                 <h3>For The Glory Of The Empire!<sub>...but to the detriment of everyone else</sub></h3>
-                <div class="role-card-body">
-                    <div class="role-card-text">
+                <div class="card-body">
+                    <div class="card-text">
                         <p><strong>Starting Resources:</strong> 14 Money, 8 Influence, 0 Knowledge</p>
                         <p><strong>Special Ability:</strong> Cannot have influence stolen</p>
                         <p><strong>Opposition:</strong> Revolutionary</p>
                     </div>
-                    <div class="token-image role-card-image">
+                    <div class="token-image">
                         <img src="assets/tokens/C.png" alt="Colonialist">
                     </div>
                 </div>
-                <div class="role-card-footer">
+                <div class="card-footer">
                     <button class="role-select" data-role="colonialist">Select</button>
                 </div>
             </div>
@@ -106,18 +106,18 @@
             <div class="role-card grid-item">
                 <h2>Audra Lorde The Revolutionary</h2>
                 <h3>The Quietest Revolutionary That Ever There Was</h3>
-                <div class="role-card-body">
-                    <div class="role-card-text">
+                <div class="card-body">
+                    <div class="card-text">
                         <p><strong>Starting Resources:</strong> 14 Knowledge, 8 Influence, 0 Money</p>
                         <p><strong>Special Ability:</strong> Ignores 1 sabatoge per game</p>
                         <p><strong>Opposition:</strong> Entrepreneur</p>
                     </div>
-                    <div class="token-image role-card-image">
+                    <div class="token-image">
                         <img src="assets/tokens/R.png" alt="Revolutionary">
                     </div>
                 </div>
-                <div class="role-card-footer">
-                    <button class="role-select" data-role="colonialist">Select</button>
+                <div class="card-footer">
+                    <button class="role-select" data-role="revolutionary">Select</button>
                 </div>
             </div>
 
@@ -125,18 +125,18 @@
             <div class="role-card grid-item">
                 <h2>Winston Churchill The Politician</h2>
                 <h3>The Politician With A Plan...Unless You Are Irish</h3>
-                <div class="role-card-body">
-                    <div class="role-card-text">
+                <div class="card-body">
+                    <div class="card-text">
                         <p><strong>Starting Resources:</strong> 14 Influence, 8 Money, 0 Knowledge</p>
                         <p><strong>Special Ability:</strong> Money cannot be stolen from</p>
                         <p><strong>Opposition:</strong> Historian</p>
                     </div>
-                    <div class="token-image role-card-image">
+                    <div class="token-image">
                         <img src="assets/tokens/P.png" alt="Politician">
                     </div>
                 </div>
-                <div class="role-card-footer">
-                    <button class="role-select" data-role="colonialist">Select</button>
+                <div class="card-footer">
+                    <button class="role-select" data-role="politician">Select</button>
                 </div>
             </div>
 
@@ -144,22 +144,23 @@
             <div class="role-card grid-item">
                 <h2>Regina Basilier The Entrepreneur</h2>
                 <h3>Making Bank Before It Was Even Legal, Legit</h3>
-                <div class="role-card-body">
-                    <div class="role-card-text">
+                <div class="card-body">
+                    <div class="card-text">
                         <p><strong>Starting Resources:</strong> 14 Money, 8 Knowledge, 0 Influence</p>
                         <p><strong>Special Ability:</strong> Never has to miss a turn</p>
                         <p><strong>Opposition:</strong> Artist</p>
                     </div>
-                    <div class="token-image role-card-image">
+                    <div class="token-image">
                         <img src="assets/tokens/E.png" alt="Entrepreneur">
                     </div>
                 </div>
-                <div class="role-card-footer">
-                    <button class="role-select" data-role="colonialist">Select</button>
+                <div class="card-footer">
+                    <button class="role-select" data-role="entrepreneur">Select</button>
                 </div>
-            </div> 
+            </div>
+        </div>
         <div class="confirm-button-container">
-                    <button id="role-confirm" class="confirm-btn">Confirm Role</button>
+            <button id="role-confirm" class="confirm-btn">Confirm Role</button>
         </div>
     </div>
 
