--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <div class="role-card grid-item">
                 <h2>Suetonius The Historian</h2>
                 <h3>Rome's Greatest Gossip....err Historian</h3>
-                <div class="card-body">
-                    <div class="card-text">
+                <div class="role-card-body">
+                    <div class="role-card-text">
                         <p><strong>Starting Resources:</strong> 14 Knowledge, 8 Memory, 0 Influence</p>
                         <p><strong>Special Ability:</strong> Cannot have knowledge stolen</p>
                         <p><strong>Opposition:</strong> Politician</p>
@@ -78,7 +78,7 @@
                         <img src="assets/tokens/H.png" alt="Historian">
                     </div>
                 </div>
-                <div class="card-footer">
+                <div class="role-card-footer">
                     <button class="role-select" data-role="historian">Select</button>
                 </div>
             </div>
@@ -87,8 +87,8 @@
             <div class="role-card grid-item">
                 <h2>Jacques Cartier The Colonialist</h2>
                 <h3>For The Glory Of The Empire!<sub>...but to the detriment of everyone else</sub></h3>
-                <div class="card-body">
-                    <div class="card-text">
+                <div class="role-card-body">
+                    <div class="role-card-text">
                         <p><strong>Starting Resources:</strong> 14 Money, 8 Influence, 0 Knowledge</p>
                         <p><strong>Special Ability:</strong> Cannot have influence stolen</p>
                         <p><strong>Opposition:</strong> Revolutionary</p>
@@ -97,7 +97,7 @@
                         <img src="assets/tokens/C.png" alt="Colonialist">
                     </div>
                 </div>
-                <div class="card-footer">
+                <div class="role-card-footer">
                     <button class="role-select" data-role="colonialist">Select</button>
                 </div>
             </div>
@@ -106,8 +106,8 @@
             <div class="role-card grid-item">
                 <h2>Audra Lorde The Revolutionary</h2>
                 <h3>The Quietest Revolutionary That Ever There Was</h3>
-                <div class="card-body">
-                    <div class="card-text">
+                <div class="role-card-body">
+                    <div class="role-card-text">
                         <p><strong>Starting Resources:</strong> 14 Knowledge, 8 Influence, 0 Money</p>
                         <p><strong>Special Ability:</strong> Ignores 1 sabatoge per game</p>
                         <p><strong>Opposition:</strong> Entrepreneur</p>
@@ -116,7 +116,7 @@
                         <img src="assets/tokens/R.png" alt="Revolutionary">
                     </div>
                 </div>
-                <div class="card-footer">
+                <div class="role-card-footer">
                     <button class="role-select" data-role="revolutionary">Select</button>
                 </div>
             </div>
@@ -125,8 +125,8 @@
             <div class="role-card grid-item">
                 <h2>Winston Churchill The Politician</h2>
                 <h3>The Politician With A Plan...Unless You Are Irish</h3>
-                <div class="card-body">
-                    <div class="card-text">
+                <div class="role-card-body">
+                    <div class="role-card-text">
                         <p><strong>Starting Resources:</strong> 14 Influence, 8 Money, 0 Knowledge</p>
                         <p><strong>Special Ability:</strong> Money cannot be stolen from</p>
                         <p><strong>Opposition:</strong> Historian</p>
@@ -135,7 +135,7 @@
                         <img src="assets/tokens/P.png" alt="Politician">
                     </div>
                 </div>
-                <div class="card-footer">
+                <div class="role-card-footer">
                     <button class="role-select" data-role="politician">Select</button>
                 </div>
             </div>
@@ -144,8 +144,8 @@
             <div class="role-card grid-item">
                 <h2>Regina Basilier The Entrepreneur</h2>
                 <h3>Making Bank Before It Was Even Legal, Legit</h3>
-                <div class="card-body">
-                    <div class="card-text">
+                <div class="role-card-body">
+                    <div class="role-card-text">
                         <p><strong>Starting Resources:</strong> 14 Money, 8 Knowledge, 0 Influence</p>
                         <p><strong>Special Ability:</strong> Never has to miss a turn</p>
                         <p><strong>Opposition:</strong> Artist</p>
@@ -154,7 +154,7 @@
                         <img src="assets/tokens/E.png" alt="Entrepreneur">
                     </div>
                 </div>
-                <div class="card-footer">
+                <div class="role-card-footer">
                     <button class="role-select" data-role="entrepreneur">Select</button>
                 </div>
             </div>
