--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <!-- Role Selection Screen -->
-    <div id="role-selection-screen" class="screen hidden">
+    <div id="role-selection-screen" class="screen">
         <h2>Select Roles</h2>
         <div id="role-selection-container" class="grid-container">
             <!-- Artist Card -->
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="role-card-footer">
-                    <button class="role-select" data-role="artist">Select</button>
+                    <button class="role-select" data-role="colonialist">Select</button>
                 </div>
             </div>
 
@@ -74,12 +74,12 @@
                         <p><strong>Special Ability:</strong> Cannot have knowledge stolen</p>
                         <p><strong>Opposition:</strong> Politician</p>
                     </div>
-                    <div class="token-image">
+                    <div class="token-image role-card-image">
                         <img src="assets/tokens/H.png" alt="Historian">
                     </div>
                 </div>
                 <div class="role-card-footer">
-                    <button class="role-select" data-role="historian">Select</button>
+                    <button class="role-select" data-role="colonialist">Select</button>
                 </div>
             </div>
 
@@ -93,7 +93,7 @@
                         <p><strong>Special Ability:</strong> Cannot have influence stolen</p>
                         <p><strong>Opposition:</strong> Revolutionary</p>
                     </div>
-                    <div class="token-image">
+                    <div class="token-image role-card-image">
                         <img src="assets/tokens/C.png" alt="Colonialist">
                     </div>
                 </div>
@@ -112,12 +112,12 @@
                         <p><strong>Special Ability:</strong> Ignores 1 sabatoge per game</p>
                         <p><strong>Opposition:</strong> Entrepreneur</p>
                     </div>
-                    <div class="token-image">
+                    <div class="token-image role-card-image">
                         <img src="assets/tokens/R.png" alt="Revolutionary">
                     </div>
                 </div>
                 <div class="role-card-footer">
-                    <button class="role-select" data-role="revolutionary">Select</button>
+                    <button class="role-select" data-role="colonialist">Select</button>
                 </div>
             </div>
 
@@ -131,12 +131,12 @@
                         <p><strong>Special Ability:</strong> Money cannot be stolen from</p>
                         <p><strong>Opposition:</strong> Historian</p>
                     </div>
-                    <div class="token-image">
+                    <div class="token-image role-card-image">
                         <img src="assets/tokens/P.png" alt="Politician">
                     </div>
                 </div>
                 <div class="role-card-footer">
-                    <button class="role-select" data-role="politician">Select</button>
+                    <button class="role-select" data-role="colonialist">Select</button>
                 </div>
             </div>
 
@@ -150,17 +150,17 @@
                         <p><strong>Special Ability:</strong> Never has to miss a turn</p>
                         <p><strong>Opposition:</strong> Artist</p>
                     </div>
-                    <div class="token-image">
+                    <div class="token-image role-card-image">
                         <img src="assets/tokens/E.png" alt="Entrepreneur">
                     </div>
                 </div>
                 <div class="role-card-footer">
-                    <button class="role-select" data-role="entrepreneur">Select</button>
+                    <button class="role-select" data-role="colonialist">Select</button>
                 </div>
+            </div> 
+            <div class="confirm-button-container">
+                    <button id="role-confirm" class="confirm-btn">Confirm Role</button>
             </div>
-        </div>
-        <div class="confirm-button-container">
-            <button id="role-confirm" class="confirm-btn">Confirm Role</button>
         </div>
     </div>
 
