--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <!-- Role Selection Screen -->
-    <div id="role-selection-screen" class="screen hidden">
+    <div id="role-selection-screen" class="screen">
         <h2>Select Roles</h2>
         <div id="role-selection-container" class="grid-container">
             <!-- Artist Card -->
