--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <!-- Role Selection Screen -->
     <div id="role-selection-screen" class="screen">
+        <div class="screen-content"></div>
         <h2>Select Roles</h2>
         <div id="role-selection-container" class="grid-container">
             <!-- Artist Card -->
