--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <!-- Revolutionary Card -->
             <div class="role-card grid-item">
-                <h2>Audra Lorde The Revolutionary</h2>
+                <h2>Audre Lorde The Revolutionary</h2>
                 <h3>The Quietest Revolutionary That Ever There Was</h3>
                 <div class="role-card-body">
                     <div class="role-card-text">
